[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Text_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Profils_list_display.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=3]

[node name="Profils_list_display" type="VBoxContainer"]
margin_right = 528.0
margin_bottom = 737.0
rect_min_size = Vector2( 0, 600 )
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
visible = false
margin_right = 528.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_right = 221.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Valeur de liste max : "

[node name="SpinBox" type="SpinBox" parent="HBoxContainer2"]
margin_left = 225.0
margin_right = 528.0
margin_bottom = 29.0
size_flags_horizontal = 3
max_value = 500.0
value = 180.0

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_top = 33.0
margin_right = 528.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 25 )
max_value = 180.0
percent_visible = false

[node name="Label" type="Label" parent="ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 1 )
text = "0 / 180"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
margin_top = 62.0
margin_right = 528.0
margin_bottom = 233.0

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_top = 237.0
margin_right = 528.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 1 )
placeholder_text = "Rechercher ..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_top = 237.0
margin_right = 528.0
margin_bottom = 274.0
size_flags_horizontal = 3

[node name="heros" type="CheckBox" parent="HBoxContainer"]
margin_right = 173.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
pressed = true
text = "HÃ©ros"

[node name="alchis" type="CheckBox" parent="HBoxContainer"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
pressed = true
text = "Alchimistes"

[node name="troupes" type="CheckBox" parent="HBoxContainer"]
margin_left = 354.0
margin_right = 528.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
pressed = true
text = "Troupes"

[node name="Profils" type="ScrollContainer" parent="."]
margin_right = 528.0
margin_bottom = 737.0
rect_min_size = Vector2( 528, 450 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiplayList" type="VBoxContainer" parent="Profils"]
margin_right = 528.0
margin_bottom = 737.0
rect_min_size = Vector2( 0, 639 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="HBoxContainer2/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
